Fix z-index y cambios en textos

--- a/css/index.css
+++ b/css/index.css
@@ -148,3 +148,6 @@ footer{
 	margin: 0;
 	padding: 5px 5px 5px 15px;
 }
+.popover {
+	z-index: 9999;
+}
